fixed wave clipping

--- a/styles/compiled-styles.css
+++ b/styles/compiled-styles.css
@@ -29,7 +29,7 @@ header p {
   border-radius: 200px 200px 0px 0px; }
 
 .pads > div {
-  height: 250px;
+  height: 50vh;
   width: 100px;
   flex: 1;
   transition: 300ms; }
@@ -63,11 +63,16 @@ header p {
   width: 180px;
   height: 180px; }
 
+.wave-divider {
+  background-color: white;
+  width: 100%;
+  height: 100px; }
+
 .wave {
   position: absolute;
   width: 100%;
   height: 140px;
-  bottom: 120px;
+  top: 50%;
   background: url("../res/wave.svg");
   animation: wave 8s linear infinite;
   transform: rotate(180deg); }
